test/cli/test/unordered-context-variables/kyverno-test.yaml
name: chained-variables
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: deny-something
  resources:
  - valid-pod
  result: pass
  rule: deny-everything
variables: variables.yaml
