test/cli/test/unordered-context-variables/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-something
spec:
  admission: true
  background: true
  rules:
  - context:
    - configMap:
        name: kyverno-context-vars
        namespace: default
      name: varA
    - name: varB
      variable:
        jmesPath: varA.data.ValueOfB
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: deny-everything
    validate:
      message: Sharing the host namespaces is not allowed. The fields spec.hostNetwork,
        spec.hostIPC, and spec.hostPID must be unset or set to `false`.
      pattern:
        spec:
          =(hostIPC): false
          =(hostPID): false
      failureAction: Enforce
