test/cli/test/unordered-context-variables/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: deny-something
  rules:
  - name: deny-everything
    values:
      varA.data.ValueOfB: something
